[package]
authors = ["Simon Prykhodko <semion.ababo@gmail.com>"]
description = "Various no_std memory allocators"
edition = "2018"
license = "MIT"
name = "kalloc"
readme = "README.md"
repository = "https://github.com/ababo/kalloc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intrusive-collections = "0.9.0"
